sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:18: error: '<-' expected but ')' found.
		for(fin to debut by -1){
                                      ^AlgCocktailSort2:25: error: illegal start of simple expression
	}
        ^